--- a/model/new_dataframe.ipynb
+++ b/model/new_dataframe.ipynb
@@ -9100,6 +9100,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_5\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_15 (Dense)             (None, 132)               8844      \n",
+      "_________________________________________________________________\n",
+      "dropout_3 (Dropout)          (None, 132)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_16 (Dense)             (None, 66)                8778      \n",
+      "=================================================================\n",
+      "Total params: 17,622\n",
+      "Trainable params: 17,622\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 110,
    "metadata": {},
    "outputs": [],
@@ -9119,7 +9149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -9128,114 +9158,114 @@
      "text": [
       "Train on 2888 samples\n",
       "Epoch 1/50\n",
-      "2888/2888 [==============================] - 0s 127us/sample - loss: 0.9227 - accuracy: 0.5658\n",
+      "2888/2888 [==============================] - 0s 52us/sample - loss: 0.5420 - accuracy: 0.6399\n",
       "Epoch 2/50\n",
-      "2888/2888 [==============================] - 0s 44us/sample - loss: 0.7639 - accuracy: 0.5893\n",
+      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.5413 - accuracy: 0.6603\n",
       "Epoch 3/50\n",
-      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.7950 - accuracy: 0.5859\n",
+      "2888/2888 [==============================] - 0s 39us/sample - loss: 0.5406 - accuracy: 0.6475\n",
       "Epoch 4/50\n",
-      "2888/2888 [==============================] - 0s 41us/sample - loss: 0.7150 - accuracy: 0.6101\n",
+      "2888/2888 [==============================] - 0s 43us/sample - loss: 0.5488 - accuracy: 0.6132\n",
       "Epoch 5/50\n",
-      "2888/2888 [==============================] - 0s 45us/sample - loss: 0.7021 - accuracy: 0.6042\n",
+      "2888/2888 [==============================] - 0s 33us/sample - loss: 0.5351 - accuracy: 0.6479\n",
       "Epoch 6/50\n",
-      "2888/2888 [==============================] - 0s 43us/sample - loss: 0.6827 - accuracy: 0.6253\n",
+      "2888/2888 [==============================] - 0s 33us/sample - loss: 0.5387 - accuracy: 0.6485\n",
       "Epoch 7/50\n",
-      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.6609 - accuracy: 0.6295\n",
+      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.5368 - accuracy: 0.6492\n",
       "Epoch 8/50\n",
-      "2888/2888 [==============================] - 0s 82us/sample - loss: 0.6737 - accuracy: 0.6195\n",
+      "2888/2888 [==============================] - 0s 36us/sample - loss: 0.5446 - accuracy: 0.6482\n",
       "Epoch 9/50\n",
-      "2888/2888 [==============================] - 0s 56us/sample - loss: 0.6528 - accuracy: 0.6343\n",
+      "2888/2888 [==============================] - 0s 39us/sample - loss: 0.5348 - accuracy: 0.6569\n",
       "Epoch 10/50\n",
-      "2888/2888 [==============================] - 0s 60us/sample - loss: 0.6352 - accuracy: 0.6479\n",
+      "2888/2888 [==============================] - 0s 38us/sample - loss: 0.5286 - accuracy: 0.6645\n",
       "Epoch 11/50\n",
-      "2888/2888 [==============================] - 0s 44us/sample - loss: 0.6250 - accuracy: 0.6444\n",
+      "2888/2888 [==============================] - 0s 54us/sample - loss: 0.5136 - accuracy: 0.6579\n",
       "Epoch 12/50\n",
-      "2888/2888 [==============================] - 0s 56us/sample - loss: 0.6297 - accuracy: 0.6278\n",
+      "2888/2888 [==============================] - 0s 45us/sample - loss: 0.5206 - accuracy: 0.6499\n",
       "Epoch 13/50\n",
-      "2888/2888 [==============================] - 0s 63us/sample - loss: 0.6250 - accuracy: 0.6319\n",
+      "2888/2888 [==============================] - 0s 67us/sample - loss: 0.5307 - accuracy: 0.6541\n",
       "Epoch 14/50\n",
-      "2888/2888 [==============================] - 0s 47us/sample - loss: 0.6216 - accuracy: 0.6323\n",
+      "2888/2888 [==============================] - 0s 60us/sample - loss: 0.5280 - accuracy: 0.6461\n",
       "Epoch 15/50\n",
-      "2888/2888 [==============================] - 0s 33us/sample - loss: 0.6137 - accuracy: 0.6382\n",
+      "2888/2888 [==============================] - 0s 56us/sample - loss: 0.5267 - accuracy: 0.6690\n",
       "Epoch 16/50\n",
-      "2888/2888 [==============================] - 0s 33us/sample - loss: 0.6176 - accuracy: 0.6177\n",
+      "2888/2888 [==============================] - 0s 80us/sample - loss: 0.5292 - accuracy: 0.6496\n",
       "Epoch 17/50\n",
-      "2888/2888 [==============================] - 0s 38us/sample - loss: 0.6060 - accuracy: 0.6468\n",
+      "2888/2888 [==============================] - 0s 45us/sample - loss: 0.5344 - accuracy: 0.6607\n",
       "Epoch 18/50\n",
-      "2888/2888 [==============================] - 0s 45us/sample - loss: 0.5990 - accuracy: 0.6378\n",
+      "2888/2888 [==============================] - 0s 46us/sample - loss: 0.5205 - accuracy: 0.6617\n",
       "Epoch 19/50\n",
-      "2888/2888 [==============================] - 0s 66us/sample - loss: 0.6003 - accuracy: 0.6323\n",
+      "2888/2888 [==============================] - 0s 47us/sample - loss: 0.5517 - accuracy: 0.6420\n",
       "Epoch 20/50\n",
-      "2888/2888 [==============================] - 0s 56us/sample - loss: 0.6063 - accuracy: 0.6191\n",
+      "2888/2888 [==============================] - 0s 52us/sample - loss: 0.5264 - accuracy: 0.6662\n",
       "Epoch 21/50\n",
-      "2888/2888 [==============================] - 0s 50us/sample - loss: 0.6109 - accuracy: 0.6499\n",
+      "2888/2888 [==============================] - 0s 48us/sample - loss: 0.5336 - accuracy: 0.6513\n",
       "Epoch 22/50\n",
-      "2888/2888 [==============================] - 0s 41us/sample - loss: 0.5984 - accuracy: 0.6274\n",
+      "2888/2888 [==============================] - 0s 43us/sample - loss: 0.5542 - accuracy: 0.6530\n",
       "Epoch 23/50\n",
-      "2888/2888 [==============================] - 0s 41us/sample - loss: 0.5951 - accuracy: 0.6409\n",
+      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.5332 - accuracy: 0.6569\n",
       "Epoch 24/50\n",
-      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.5888 - accuracy: 0.6416\n",
+      "2888/2888 [==============================] - 0s 40us/sample - loss: 0.5253 - accuracy: 0.6742\n",
       "Epoch 25/50\n",
-      "2888/2888 [==============================] - 0s 36us/sample - loss: 0.5805 - accuracy: 0.6375\n",
+      "2888/2888 [==============================] - 0s 45us/sample - loss: 0.5090 - accuracy: 0.6569\n",
       "Epoch 26/50\n",
-      "2888/2888 [==============================] - 0s 33us/sample - loss: 0.5821 - accuracy: 0.6434\n",
+      "2888/2888 [==============================] - 0s 51us/sample - loss: 0.5273 - accuracy: 0.6447\n",
       "Epoch 27/50\n",
-      "2888/2888 [==============================] - 0s 33us/sample - loss: 0.5737 - accuracy: 0.6468\n",
+      "2888/2888 [==============================] - 0s 48us/sample - loss: 0.5320 - accuracy: 0.6558\n",
       "Epoch 28/50\n",
-      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.5811 - accuracy: 0.6489\n",
+      "2888/2888 [==============================] - 0s 39us/sample - loss: 0.5084 - accuracy: 0.6804\n",
       "Epoch 29/50\n",
-      "2888/2888 [==============================] - 0s 39us/sample - loss: 0.5849 - accuracy: 0.6479\n",
+      "2888/2888 [==============================] - 0s 39us/sample - loss: 0.5181 - accuracy: 0.6479\n",
       "Epoch 30/50\n",
-      "2888/2888 [==============================] - 0s 53us/sample - loss: 0.5665 - accuracy: 0.6392\n",
+      "2888/2888 [==============================] - 0s 40us/sample - loss: 0.5321 - accuracy: 0.6600\n",
       "Epoch 31/50\n",
-      "2888/2888 [==============================] - 0s 52us/sample - loss: 0.5674 - accuracy: 0.6558\n",
+      "2888/2888 [==============================] - 0s 37us/sample - loss: 0.5200 - accuracy: 0.6627\n",
       "Epoch 32/50\n",
-      "2888/2888 [==============================] - 0s 51us/sample - loss: 0.5650 - accuracy: 0.6350\n",
+      "2888/2888 [==============================] - 0s 37us/sample - loss: 0.5242 - accuracy: 0.6541\n",
       "Epoch 33/50\n",
-      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.5464 - accuracy: 0.6506\n",
+      "2888/2888 [==============================] - 0s 37us/sample - loss: 0.5155 - accuracy: 0.6659\n",
       "Epoch 34/50\n",
-      "2888/2888 [==============================] - 0s 40us/sample - loss: 0.5494 - accuracy: 0.6454\n",
+      "2888/2888 [==============================] - 0s 40us/sample - loss: 0.5250 - accuracy: 0.6479\n",
       "Epoch 35/50\n",
-      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.5621 - accuracy: 0.6527\n",
+      "2888/2888 [==============================] - 0s 43us/sample - loss: 0.5371 - accuracy: 0.6413\n",
       "Epoch 36/50\n",
-      "2888/2888 [==============================] - 0s 40us/sample - loss: 0.5548 - accuracy: 0.6413\n",
+      "2888/2888 [==============================] - 0s 41us/sample - loss: 0.5315 - accuracy: 0.6482\n",
       "Epoch 37/50\n",
-      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.5548 - accuracy: 0.6326\n",
+      "2888/2888 [==============================] - 0s 41us/sample - loss: 0.5253 - accuracy: 0.6634\n",
       "Epoch 38/50\n",
-      "2888/2888 [==============================] - 0s 38us/sample - loss: 0.5484 - accuracy: 0.6406\n",
+      "2888/2888 [==============================] - 0s 44us/sample - loss: 0.5215 - accuracy: 0.6600\n",
       "Epoch 39/50\n",
-      "2888/2888 [==============================] - 0s 36us/sample - loss: 0.5449 - accuracy: 0.6638\n",
+      "2888/2888 [==============================] - 0s 48us/sample - loss: 0.5133 - accuracy: 0.6603\n",
       "Epoch 40/50\n",
-      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.5342 - accuracy: 0.6575\n",
+      "2888/2888 [==============================] - 0s 43us/sample - loss: 0.5262 - accuracy: 0.6652\n",
       "Epoch 41/50\n",
-      "2888/2888 [==============================] - 0s 45us/sample - loss: 0.5355 - accuracy: 0.6620\n",
+      "2888/2888 [==============================] - 0s 44us/sample - loss: 0.5191 - accuracy: 0.6735\n",
       "Epoch 42/50\n",
-      "2888/2888 [==============================] - 0s 57us/sample - loss: 0.5461 - accuracy: 0.6676\n",
+      "2888/2888 [==============================] - 0s 43us/sample - loss: 0.5191 - accuracy: 0.6461\n",
       "Epoch 43/50\n",
-      "2888/2888 [==============================] - 0s 45us/sample - loss: 0.5375 - accuracy: 0.6472\n",
+      "2888/2888 [==============================] - 0s 44us/sample - loss: 0.5109 - accuracy: 0.6614\n",
       "Epoch 44/50\n",
-      "2888/2888 [==============================] - 0s 47us/sample - loss: 0.5473 - accuracy: 0.6406\n",
+      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.5146 - accuracy: 0.6638\n",
       "Epoch 45/50\n",
-      "2888/2888 [==============================] - 0s 39us/sample - loss: 0.5383 - accuracy: 0.6496\n",
+      "2888/2888 [==============================] - 0s 57us/sample - loss: 0.5157 - accuracy: 0.6659\n",
       "Epoch 46/50\n",
-      "2888/2888 [==============================] - 0s 36us/sample - loss: 0.5437 - accuracy: 0.6524\n",
+      "2888/2888 [==============================] - 0s 59us/sample - loss: 0.5160 - accuracy: 0.6627\n",
       "Epoch 47/50\n",
-      "2888/2888 [==============================] - 0s 37us/sample - loss: 0.5413 - accuracy: 0.6454\n",
+      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.5228 - accuracy: 0.6704\n",
       "Epoch 48/50\n",
-      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.5481 - accuracy: 0.6361\n",
+      "2888/2888 [==============================] - 0s 44us/sample - loss: 0.5143 - accuracy: 0.6711\n",
       "Epoch 49/50\n",
-      "2888/2888 [==============================] - 0s 38us/sample - loss: 0.5297 - accuracy: 0.6402\n",
+      "2888/2888 [==============================] - 0s 44us/sample - loss: 0.5196 - accuracy: 0.6423\n",
       "Epoch 50/50\n",
-      "2888/2888 [==============================] - 0s 43us/sample - loss: 0.5396 - accuracy: 0.6354\n"
+      "2888/2888 [==============================] - 0s 47us/sample - loss: 0.5257 - accuracy: 0.6652\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fce5d09ef50>"
+       "<tensorflow.python.keras.callbacks.History at 0x7fce5d0a4b10>"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9243,6 +9273,28 @@
    "source": [
     "# Train the model\n",
     "model.fit(X_train, y_train, epochs = 50, verbose = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2888/2888 [==============================] - 0s 43us/sample - loss: 0.4711 - accuracy: 0.6984\n",
+      "The accuracy of the model is: 0.6984071731567383\n",
+      "The loss of the model is: 0.4711\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the trained model\n",
+    "results = model.evaluate(X_train, y_train)\n",
+    "print(f\"The accuracy of the model is: {results[1]}\")\n",
+    "print(f\"The loss of the model is: {round(results[0], 4)}\")"
    ]
   }
  ],
