--- a/model/new_dataframe.ipynb
+++ b/model/new_dataframe.ipynb
@@ -30,6 +30,9 @@
     "# Settings to allow all columns in dataframe to display\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "np.random.seed(2)\n",
+    "\n",
+    "# Notebook display options\n",
     "desired_width = 320\n",
     "pd.set_option('display.width', desired_width)\n",
     "np.set_printoptions(linewidth=desired_width)\n",
@@ -7653,7 +7656,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sliced DataFrame for Machine Learning"
+    "### Sliced DF for Machine Learning"
    ]
   },
   {
@@ -8791,7 +8794,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove labels from final dataframe\n",
+    "# Separate features and labels for models\n",
     "features = final.drop(labels = \"Win_x\", axis = 1)\n",
     "labels = final[\"Win_x\"]"
    ]
@@ -9195,7 +9198,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# Initializing a DataFrame to save each model results\n",
-    "results = pd.DataFrame()\n",
+    "rf_results = pd.DataFrame()\n",
     "\n",
     "# Loop to use different parameters in the model\n",
     "for f in np.arange(2,68,2):\n",
@@ -9221,7 +9224,7 @@
     "        new_row = {'max_features': f,\n",
     "                   'num_estimators': e,\n",
     "                   'accuracy': clfScores.mean()}\n",
-    "        results = results.append(new_row, ignore_index = True)"
+    "        rf_results = rf_results.append(new_row, ignore_index = True)"
    ]
   },
   {
@@ -9246,9 +9249,9 @@
     "from mpl_toolkits import mplot3d\n",
     "\n",
     "# Data for a three-dimensional scattered points\n",
-    "x = results['max_features'].tolist()\n",
-    "y = results['num_estimators'].tolist()     # test removing .tolist() on all three lines\n",
-    "z = results['accuracy'].tolist()\n",
+    "x = rf_results['max_features'].tolist()\n",
+    "y = rf_results['num_estimators'].tolist()     # test removing .tolist() on all three lines\n",
+    "z = rf_results['accuracy'].tolist()\n",
     "\n",
     "# Creating figure\n",
     "fig = plt.figure(figsize= (12,8))\n",
@@ -9392,14 +9395,14 @@
    ],
    "source": [
     "# Sort results DataFrame\n",
-    "results.sort_values(by = 'accuracy', ascending = False)"
+    "rf_results.sort_values(by = 'accuracy', ascending = False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Neural Network"
+    "### Neural Networks"
    ]
   },
   {
@@ -10276,7 +10279,7 @@
    "outputs": [],
    "source": [
     "def select_optimizer(optimize, learn):\n",
-    "    #optimizer_list = ['Adam', 'SGD', 'Adadelta', 'RMSprop', 'Adagrad', 'Adamax', 'Nadam', 'Ftrl']\n",
+    "    \"\"\"Used to select an optimizer and learning rate. \"\"\"\n",
     "    optimizer_dict = {'Adam': tf.optimizers.Adam(learning_rate = learn),\n",
     "                      'SGD': tf.optimizers.SGD(learning_rate = learn),\n",
     "                      'Adadelta': tf.optimizers.Adadelta(learning_rate = learn),\n",
@@ -10286,9 +10289,24 @@
     "                      'Nadam': tf.optimizers.Nadam(learning_rate = learn),\n",
     "                      'Ftrl': tf.optimizers.Ftrl(learning_rate = learn),\n",
     "                      }\n",
-    "    #index = optimizer_list.index(optimize)\n",
     "    x = optimizer_dict[optimize]\n",
     "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define function used in chapter to get model performance (RMSE)\n",
+    "def get_model_perf(model_obj):\n",
+    "\n",
+    "    score_train = model_obj.evaluate(trainX, trainY, verbose=0)\n",
+    "    print('Train RMSE: %.2f RMSE' % (math.sqrt(score_train)))\n",
+    "\n",
+    "    score_test = model_obj.evaluate(testX, testY, verbose=0)\n",
+    "    print('Test RMSE: %.2f RMSE' % (math.sqrt(score_test)))"
    ]
   },
   {
@@ -18775,28 +18793,6 @@
    ],
    "source": [
     "print(nn_history.history.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 616,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def select_optimizer(optimize, learn):\n",
-    "    #optimizer_list = ['Adam', 'SGD', 'Adadelta', 'RMSprop', 'Adagrad', 'Adamax', 'Nadam', 'Ftrl']\n",
-    "    optimizer_dict = {'Adam': tf.optimizers.Adam(learning_rate = learn),\n",
-    "                      'SGD': tf.optimizers.SGD(learning_rate = learn),\n",
-    "                      'Adadelta': tf.optimizers.SGD(learning_rate = learn),\n",
-    "                      'RMSprop': tf.optimizers.SGD(learning_rate = learn),\n",
-    "                      'Adagrad': tf.optimizers.SGD(learning_rate = learn),\n",
-    "                      'Adamax': tf.optimizers.SGD(learning_rate = learn),\n",
-    "                      'Nadam': tf.optimizers.SGD(learning_rate = learn),\n",
-    "                      'Ftlr': tf.optimizers.SGD(learning_rate = learn),\n",
-    "                      }\n",
-    "    #index = optimizer_list.index(optimize)\n",
-    "    x = optimizer_dict[optimize]\n",
-    "    return x"
    ]
   },
   {
