--- a/model/new_dataframe.ipynb
+++ b/model/new_dataframe.ipynb
@@ -23,13 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 655,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Settings to allow all columns in dataframe to display\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import math\n",
     "np.random.seed(2)\n",
     "\n",
     "# Notebook display options\n",
@@ -10182,12 +10183,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 572,
+   "execution_count": 637,
    "metadata": {},
    "outputs": [],
    "source": [
     "val = history.history['val_loss']\n",
     "loss = history.history['loss']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 642,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avgval = sum(history.history['loss']) / len(history.history['loss'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 643,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6078234545300157"
+      ]
+     },
+     "execution_count": 643,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "avgval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 654,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'batch_size': 32, 'epochs': 300, 'steps': 77, 'samples': 2460, 'verbose': 0, 'do_validation': True, 'metrics': ['loss', 'accuracy', 'val_loss', 'val_accuracy']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(history.params)"
    ]
   },
   {
@@ -10291,22 +10338,6 @@
     "                      }\n",
     "    x = optimizer_dict[optimize]\n",
     "    return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define function used in chapter to get model performance (RMSE)\n",
-    "def get_model_perf(model_obj):\n",
-    "\n",
-    "    score_train = model_obj.evaluate(trainX, trainY, verbose=0)\n",
-    "    print('Train RMSE: %.2f RMSE' % (math.sqrt(score_train)))\n",
-    "\n",
-    "    score_test = model_obj.evaluate(testX, testY, verbose=0)\n",
-    "    print('Test RMSE: %.2f RMSE' % (math.sqrt(score_test)))"
    ]
   },
   {
@@ -18442,7 +18473,7 @@
     "        new_row = {'epochs': nn_epochs,\n",
     "                   'validation_split': val_split,\n",
     "                   'training accuracy': nn_eval[1],\n",
-    "                   'loss': nn_eval[0],\n",
+    "                   'training loss': nn_eval[0],\n",
     "                   'testing accuracy': test_accuracy,\n",
     "                   'optimizer': str(opt),\n",
     "                   'learning_rate': lr\n",
@@ -18452,7 +18483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 631,
    "metadata": {},
    "outputs": [
     {
@@ -18736,6 +18767,156 @@
        "      <td>0.861831</td>\n",
        "      <td>0.15</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.597547</td>\n",
+       "      <td>Adamax</td>\n",
+       "      <td>0.683702</td>\n",
+       "      <td>0.681174</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>0.522963</td>\n",
+       "      <td>Adamax</td>\n",
+       "      <td>0.664365</td>\n",
+       "      <td>0.735060</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>27</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0100</td>\n",
+       "      <td>0.332341</td>\n",
+       "      <td>Adamax</td>\n",
+       "      <td>0.599448</td>\n",
+       "      <td>0.895682</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>28</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.1000</td>\n",
+       "      <td>0.539191</td>\n",
+       "      <td>Adamax</td>\n",
+       "      <td>0.602210</td>\n",
+       "      <td>0.917789</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>29</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.961901</td>\n",
+       "      <td>Adamax</td>\n",
+       "      <td>0.633978</td>\n",
+       "      <td>0.763731</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>30</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>0.564750</td>\n",
+       "      <td>Nadam</td>\n",
+       "      <td>0.676796</td>\n",
+       "      <td>0.706045</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>31</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>0.391336</td>\n",
+       "      <td>Nadam</td>\n",
+       "      <td>0.624309</td>\n",
+       "      <td>0.841451</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>32</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0100</td>\n",
+       "      <td>0.459566</td>\n",
+       "      <td>Nadam</td>\n",
+       "      <td>0.589779</td>\n",
+       "      <td>0.911572</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>33</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.1000</td>\n",
+       "      <td>0.918190</td>\n",
+       "      <td>Nadam</td>\n",
+       "      <td>0.610497</td>\n",
+       "      <td>0.762349</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>34</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.688998</td>\n",
+       "      <td>Nadam</td>\n",
+       "      <td>0.571823</td>\n",
+       "      <td>0.546459</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>35</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>3.494798</td>\n",
+       "      <td>Ftrl</td>\n",
+       "      <td>0.569061</td>\n",
+       "      <td>0.549568</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>36</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0010</td>\n",
+       "      <td>1.161863</td>\n",
+       "      <td>Ftrl</td>\n",
+       "      <td>0.571823</td>\n",
+       "      <td>0.546459</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>37</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0100</td>\n",
+       "      <td>0.582185</td>\n",
+       "      <td>Ftrl</td>\n",
+       "      <td>0.675414</td>\n",
+       "      <td>0.690501</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>38</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.1000</td>\n",
+       "      <td>0.501641</td>\n",
+       "      <td>Ftrl</td>\n",
+       "      <td>0.646409</td>\n",
+       "      <td>0.758549</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>39</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.515092</td>\n",
+       "      <td>Ftrl</td>\n",
+       "      <td>0.620166</td>\n",
+       "      <td>0.747841</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -18766,16 +18947,31 @@
        "21   100.0         0.0010  0.894793   Adagrad          0.610497           0.615544              0.15\n",
        "22   100.0         0.0100  0.564692   Adagrad          0.669890           0.709499              0.15\n",
        "23   100.0         0.1000  0.367163   Adagrad          0.629834           0.854922              0.15\n",
-       "24   100.0         1.0000  0.475125   Adagrad          0.602210           0.861831              0.15"
+       "24   100.0         1.0000  0.475125   Adagrad          0.602210           0.861831              0.15\n",
+       "25   100.0         0.0001  0.597547    Adamax          0.683702           0.681174              0.15\n",
+       "26   100.0         0.0010  0.522963    Adamax          0.664365           0.735060              0.15\n",
+       "27   100.0         0.0100  0.332341    Adamax          0.599448           0.895682              0.15\n",
+       "28   100.0         0.1000  0.539191    Adamax          0.602210           0.917789              0.15\n",
+       "29   100.0         1.0000  0.961901    Adamax          0.633978           0.763731              0.15\n",
+       "30   100.0         0.0001  0.564750     Nadam          0.676796           0.706045              0.15\n",
+       "31   100.0         0.0010  0.391336     Nadam          0.624309           0.841451              0.15\n",
+       "32   100.0         0.0100  0.459566     Nadam          0.589779           0.911572              0.15\n",
+       "33   100.0         0.1000  0.918190     Nadam          0.610497           0.762349              0.15\n",
+       "34   100.0         1.0000  0.688998     Nadam          0.571823           0.546459              0.15\n",
+       "35   100.0         0.0001  3.494798      Ftrl          0.569061           0.549568              0.15\n",
+       "36   100.0         0.0010  1.161863      Ftrl          0.571823           0.546459              0.15\n",
+       "37   100.0         0.0100  0.582185      Ftrl          0.675414           0.690501              0.15\n",
+       "38   100.0         0.1000  0.501641      Ftrl          0.646409           0.758549              0.15\n",
+       "39   100.0         1.0000  0.515092      Ftrl          0.620166           0.747841              0.15"
       ]
      },
-     "execution_count": 630,
+     "execution_count": 631,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nn_results.head(25)"
+    "nn_results.head(50)"
    ]
   },
   {
