--- a/FinalProjectNN.ipynb
+++ b/FinalProjectNN.ipynb
@@ -90,9 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-02-22 16:21:23.967204: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import python coding libraries\n",
     "import urllib.request\n",
@@ -105,7 +114,6 @@
     "from sklearn import preprocessing\n",
     "import math\n",
     "import tensorflow as tf\n",
-    "tf.random.set_seed(10)\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout, Conv1D, SimpleRNN, LSTM, GRU, Reshape, Activation, Bidirectional\n",
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +322,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>NYR</td>\n",
        "      <td>2008</td>\n",
        "      <td>NYR</td>\n",
@@ -428,7 +436,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>NYR</td>\n",
        "      <td>2008</td>\n",
        "      <td>NYR</td>\n",
@@ -542,7 +550,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>NYR</td>\n",
        "      <td>2008</td>\n",
        "      <td>NYR</td>\n",
@@ -656,7 +664,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>NYR</td>\n",
        "      <td>2008</td>\n",
        "      <td>NYR</td>\n",
@@ -770,7 +778,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>NYR</td>\n",
        "      <td>2008</td>\n",
        "      <td>NYR</td>\n",
@@ -884,7 +892,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5</td>\n",
+       "      <th>5</th>\n",
        "      <td>NYR</td>\n",
        "      <td>2008</td>\n",
        "      <td>NYR</td>\n",
@@ -998,7 +1006,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>6</td>\n",
+       "      <th>6</th>\n",
        "      <td>NYR</td>\n",
        "      <td>2008</td>\n",
        "      <td>NYR</td>\n",
@@ -1112,7 +1120,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>7</td>\n",
+       "      <th>7</th>\n",
        "      <td>NYR</td>\n",
        "      <td>2008</td>\n",
        "      <td>NYR</td>\n",
@@ -1226,7 +1234,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>8</td>\n",
+       "      <th>8</th>\n",
        "      <td>NYR</td>\n",
        "      <td>2008</td>\n",
        "      <td>NYR</td>\n",
@@ -1340,7 +1348,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>9</td>\n",
+       "      <th>9</th>\n",
        "      <td>NYR</td>\n",
        "      <td>2008</td>\n",
        "      <td>NYR</td>\n",
@@ -1555,7 +1563,7 @@
        "9                                      2.000                    1.0                              0.004                                   0.000                 0.000                   0.006                                0.006                                      0.006            0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23979,7 +23987,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('NN')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -23993,12 +24001,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c599e81ace37994bed7b9bbd7d108e9889c61d697bcdc0abde22622452708644"
+    "hash": "ed8817ef4945462d6309dd750e91178ffe6e6294ba022c957a79077f96f6264d"
    }
   }
  },
